--- a/css/forms.css
+++ b/css/forms.css
@@ -184,3 +184,11 @@ form.forgot input.sub {
 #container .left .main .content .wrapper form.forgot p { margin:5px 0 15px 0; }
 
 #res_desc { height:70px; width:480px;}
+
+input#searchbox {
+	width:450px;
+	border:1px solid #7f9db9;
+	padding:4px;
+	margin:5px 0;
+}
+#search .button { height:30px; }
