--- a/css/layout.css
+++ b/css/layout.css
@@ -21,7 +21,7 @@ ul.nobullet li { margin-bottom:5px; }
 .tac { text-align:center; }
 .tal { text-align:left; }
 
-.error, .success { padding:10px; margin-bottom:10px; }
+.error, .success { padding:10px; ma prgin-bottom:10px; }
 .error ul, .success ul { margin:10px 30px;}
 
 div.pagediv {
@@ -41,8 +41,6 @@ table.activity td {
 	margin-bottom:10px; 
 }
 #notifylink,#fileslink { padding:4px; }
-
-.catbox { width:65px;padding:0 2px; }
 
 #login { margin-bottom:20px; }
 
@@ -69,6 +67,10 @@ table.activity td {
 #container .left .main .header {
 	padding:10px 20px;
 	margin-bottom:15px;
+}
+
+#container .left .main .headernomb {
+	margin-bottom:0px;
 }
 
 #container .left .main .submenu {
@@ -123,7 +125,7 @@ table.activity td {
 }
 
 #container .left .main .content .wrapper p {
-	margin:12px 10px;
+	margin:12px 10px; clear:both;
 }
 
 #container .left .main .content .itemlist ul,
@@ -185,7 +187,6 @@ table.activity td {
 }
 
 #container .left .main .content .ms {
-	padding-left:20px;
 	margin-bottom:10px;
 	margin-left:10px;
 }
@@ -198,7 +199,7 @@ table.activity td {
 
 #container .left .main .content .byline {
 	padding:8px;
-	margin-left:60px;
+	margin-left:8px;
 }
 
 #container .left .main .content .listItem .top {
@@ -253,6 +254,13 @@ table.activity td {
 }
 
 #issuefilter { padding:8px; }
+
+/* search page */
+.catbox { width:65px;padding:0 2px; }
+.searchresult { padding:10px; margin:5px; }
+.searchresult .catbox { padding:2px; margin-right:7px; float:left; }
+.searchresult h4 { margin-bottom:0; }
+#container .left .main .content .wrapper .searchresult p { margin:10px 0 0 0; padding:0; }
 
 /* make room for files icons */
 .fileLrg > h3, .fileLrg > p { padding-left:53px; }
