--- a/css/layout.css
+++ b/css/layout.css
@@ -16,6 +16,8 @@ ul.nobullet li { margin-bottom:5px; }
 .mb20 { margin-bottom:20px; }
 .mt5 { margin-top:5px; }
 .mr5 { margin-right:5px; }
+.mt5 { margin-top:5px; }
+.mt10 { margin-top:10px; }
 .mt20 { margin-top:20px; }
 .pl5 { padding-left:5px; }
 .tac { text-align:center; }
