add due date to issues

--- a/css/style.css
+++ b/css/style.css
@@ -246,8 +246,9 @@ a.subactive { font-size:125%; font-weight:bold; text-decoration:none; }
 }
 
 /* issue status */
-#issueStatus{clear:both; margin-top:20px;}
+#issueStatus{clear:both; margin-top:20px; }
 #issueStatus li{
+	width:25%;
 	height:36px;
 	list-style:none;
 	float:left;
