--- a/css/forms.css
+++ b/css/forms.css
@@ -63,6 +63,10 @@ form.frm p input.shorter {
 	width:180px;
 } 
 
+form.frm p input.shortest {
+	width:80px;	
+}
+
 form.frm p input.checkbox {
 	width:20px;
 }
