--- a/css/images.css
+++ b/css/images.css
@@ -89,6 +89,11 @@
 	padding-left:20px;
 }
 
+.backup {
+	background: url(../images/backup.gif) no-repeat 0 50%;
+	padding-left:20px;
+}
+
 .cancel {
 	background: url(../images/cancel.gif) no-repeat 0 50%;
 	padding-left:20px;
@@ -134,6 +139,11 @@
 	padding-left:20px;
 }
 
+.folder {
+	background: url(../images/folder.gif) no-repeat 0 50%;
+	padding-left:20px;
+}
+
 .mstone {
 	background: url(../images/milestone16.gif) no-repeat 0 50%;
 	padding-left:20px;
@@ -147,6 +157,11 @@
 .reorder {
 	background: url(../images/reorder.gif) no-repeat 0 50%;
 	padding-left:20px;
+}
+
+.save {
+	background: url(../images/filesave.gif) no-repeat 0 50%;
+	padding-left:22px;
 }
 
 .submenu {
