--- a/css/images.css
+++ b/css/images.css
@@ -159,6 +159,11 @@
 	padding-left:20px;
 }
 
+.report {
+	background: url(../images/report.gif) no-repeat 0 50%;
+	padding-left:20px;
+}
+
 .save {
 	background: url(../images/filesave.gif) no-repeat 0 50%;
 	padding-left:22px;
