time tracking stuff

--- a/css/forms.css
+++ b/css/forms.css
@@ -55,7 +55,7 @@ form.frm p input, form.frm p textarea {
 	padding:2px;
 }
 
-form.frm p input.short, form.frm p textarea.short {
+form.frm p input.short, form.frm p textarea.short, tr.input td input.short {
 	width:390px;
 }
 
@@ -63,8 +63,12 @@ form.frm p input.shorter {
 	width:180px;
 } 
 
-form.frm p input.shortest {
+form.frm p input.shortest, tr.input td input.shortest {
 	width:80px;	
+}
+
+tr.input td input.tiny {
+	width:40px;
 }
 
 form.frm p input.checkbox {
