--- a/css/images.css
+++ b/css/images.css
@@ -173,6 +173,16 @@
 	background: url(../images/arrow_down.gif) no-repeat 30px 50%;
 }
 
+.time {
+	background: url(../images/time2.gif) no-repeat 50% 50%;
+	padding-left:20px;
+}
+
+.timefull {
+	background: url(../images/time3.gif) no-repeat 50% 50%;
+	padding-left:20px;
+}
+
 .warn {
 	background: url(../images/warn.gif) no-repeat 0 50%;
 	padding-left:20px;
