--- a/css/tables.css
+++ b/css/tables.css
@@ -58,6 +58,11 @@ table#milestone_cal tr td.active { border:1px solid #000; background-color:#fff;
 table#milestone_cal tr td ul.cal_ms { list-style:none; }
 table#milestone_cal tr td ul.cal_ms li { list-style-type:none; }
 
+table#alltodos { width:100%; }
+table#alltodos tr td { border-top:1px solid #ccc; padding:5px; vertical-align:top; }
+table#alltodos tr td:first-child { background-color:#eee; text-align:right; width:28%; font-weight:bold; }
+table#alltodos li { list-style-type:none; margin-bottom:5px; }
+
 tr.input td {
 	padding:10px;
 	background-color:#eee;
