--- a/css/tables.css
+++ b/css/tables.css
@@ -53,7 +53,7 @@ table#milestone_cal { background:#e0e0e0; border-collapse:separate;	border-spaci
 table#milestone_cal tr th, table#milestone_cal tr td { font-family:Verdana, Arial, sans-serif; font-size:80%; }
 table#milestone_cal tr th,table#milestone_cal tr td.blank { background-color:#e0e0e0; color:#666; font-weight:bold;	border-bottom:none; }
 table#milestone_cal tr td {	background-color:#f0f0f0; color:#aaa; }
-table#milestone_cal tr td.today { border:1px solid #000; background-color:#ffc;	color:#000; }
+table#milestone_cal tr td.today { border:2px solid #fc6; background-color:#ffc;	color:#000; }
 table#milestone_cal tr td.active { border:1px solid #000; background-color:#fff; color:#000; }
 table#milestone_cal tr td ul.cal_ms { list-style:none; }
 table#milestone_cal tr td ul.cal_ms li { list-style-type:none; }
