--- a/css/layout.css
+++ b/css/layout.css
@@ -21,6 +21,7 @@ ul.nobullet li { margin-bottom:5px; }
 .mt10 { margin-top:10px; }
 .mt15 { margin-top:15px; }
 .mt20 { margin-top:20px; }
+.p10 { padding:10px; }
 .pl5 { padding-left:5px; }
 .tac { text-align:center; }
 .tal { text-align:left; }
