--- a/css/layout.css
+++ b/css/layout.css
@@ -22,6 +22,7 @@ ul.nobullet li { margin-bottom:5px; }
 .mt15 { margin-top:15px; }
 .mt20 { margin-top:20px; }
 .p10 { padding:10px; }
+.pb15 { padding-bottom:15px; }
 .pl5 { padding-left:5px; }
 .tac { text-align:center; }
 .tal { text-align:left; }
