--- a/css/forms.css
+++ b/css/forms.css
@@ -171,7 +171,7 @@ form#login input {
 	padding:4px;
 	margin-bottom:5px;
 }
-form#login input#remain { text-align:left; width:15px; }
+form#login input#remain { text-align:left; width:15px; border:none; }
 form#login label#rem { font-weight:normal; font-size:1em; }
 form#login small { margin-left:20px; font-size:.9em; }
 form#login input.loginactive {
