--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ h2 { font-size:1.5em; font-weight:bold; }
 h3 { font-size:1.3em; font-weight:bold; }
 h4 { font-size:1.2em; font-weight:normal; }
 h6 { font-size:.8em; font-weight:normal; }
+.sm { font-size:.9em; }
 
 h5.sub {
 	font-size:.9em;
@@ -22,6 +23,7 @@ h5.sub {
 fieldset { border:1px solid #666; }
 
 .b { font-weight:bold; }
+.norm { font-weight:normal; }
 .i { font-style:italic; }
 .r { color:#f00; }
 .g { color:#666; }
