--- a/css/images.css
+++ b/css/images.css
@@ -8,8 +8,8 @@
 	padding-left:28px;
 }
 
-#container .left .main .header h2.milestone {
-	background:url(../images/milestone.gif) no-repeat 0 50%;
+#container .left .main .header h2.bill {
+	background:url(../images/money.gif) no-repeat 0 50%;
 	padding-left:28px;
 }
 
@@ -20,6 +20,11 @@
 
 #container .left .main .header h2.issues {
 	background:url(../images/issues.gif) no-repeat 0 50%;
+	padding-left:28px;
+}
+
+#container .left .main .header h2.milestone {
+	background:url(../images/milestone.gif) no-repeat 0 50%;
 	padding-left:28px;
 }
 
@@ -175,6 +180,10 @@
 
 .warn {
 	background: url(../images/warn.gif) no-repeat 0 50%;
+	padding-left:20px;
+}
+.x {
+	background: url(../images/x.png) no-repeat 0 50%;
 	padding-left:20px;
 }
 
