--- a/css/layout.css
+++ b/css/layout.css
@@ -15,6 +15,7 @@ ul.nobullet li { margin-bottom:5px; }
 .mb15 { margin-bottom:15px; }
 .mb20 { margin-bottom:20px; }
 .ml10 { margin-left:10px; }
+.ml40 { margin-left:40px; }
 .mt5 { margin-top:5px; }
 .mr5 { margin-right:5px; }
 .mt5 { margin-top:5px; }
