--- a/css/layout.css
+++ b/css/layout.css
@@ -26,7 +26,7 @@ ul.nobullet li { margin-bottom:5px; }
 .pb15 { padding-bottom:15px; }
 .pl5 { padding-left:5px; }
 .tac { text-align:center; }
-.tal { text-align:left; }
+.tal { text-align:left !important }
 .tar { text-align:right; }
 
 .error, .success { padding:10px; margin-bottom:10px; }
