--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,10 @@ a.subactive { font-size:125%; font-weight:bold; text-decoration:none; }
 	list-style:none;
 }
 
+#container .left .main .content #listWrapper .todolist h3 a.title {
+	color:#000;
+}
+
 #container .left .main .content #listWrapper .todolist td div {
 	background-color:#fff;
 	font-size:1.2em;
