--- a/css/forms.css
+++ b/css/forms.css
@@ -185,20 +185,24 @@ textarea.addtask:focus {
 fieldset.addnew label { text-align:left;width:auto;display:block; }
 fieldset.addnew label > input,fieldset.addnew select.block { display:block; }
 
+.idleField {
+	border:1px solid #999;
+	background-color:#fff;
+}
+.focusField {
+	border:1px solid #f00;
+	background-color:#ffc;
+}
+
 form#login label { font-weight:bold; font-size:1.2em; }
 form#login input {
 	width:180px;
-	border:2px solid #999;
 	padding:4px;
 	margin-bottom:5px;
 }
 form#login input#remain { text-align:left; width:15px; border:none; }
 form#login label#rem { font-weight:normal; font-size:1em; }
 form#login small { margin-left:20px; font-size:.9em; }
-form#login input.loginactive {
-	border:2px solid #f00;
-	background-color:#ffc;
-}
 form#login input.sub {
 	width:100px;
 	padding:3px;
