--- a/css/style.css
+++ b/css/style.css
@@ -207,6 +207,7 @@ a.subactive { font-size:125%; font-weight:bold; text-decoration:none; }
 #container .left .main .content .byline {
 	background-color:#f5f5f5;
 	color:#666;
+	font-size:.9em;
 }
 
 #container .left .bottom {
