--- a/css/images.css
+++ b/css/images.css
@@ -114,7 +114,7 @@
 	padding-left:20px;
 }
 
-.close,.accept,.success {
+.close,.assign,.success {
 	background: url(../images/close.gif) no-repeat 0 50%;
 	padding-left:20px;
 }
