--- a/css/style.css
+++ b/css/style.css
@@ -333,6 +333,31 @@ a.subactive { font-size:125%; font-weight:bold; text-decoration:none; }
 	border:1px solid #ccc;
 }
 
+ul#assignmenu {
+	display:none;
+	position:absolute;
+	top:25px;
+	right:0;
+	background-color:#eff7ff;
+	text-align-right;
+	border:1px solid #75BAFF;
+	border-top:none;
+	list-style:none;
+}
+
+ul#assignmenu li a {
+	text-decoration:none;
+	display:block;
+	width:100px;
+	padding:3px;
+	padding-left:10px;
+	border-bottom:1px solid #B3D9FF;
+}
+
+ul#assignmenu li a:hover {
+	background-color:#B3D9FF;
+}
+
 .searchresult { border:2px dotted #eee; background-color:#fafafa; }
 .searchresult+.odd { background-color:#f5f5f5; }
 .searchresult h4 { font-weight:bold; }
