--- a/css/tables.css
+++ b/css/tables.css
@@ -76,6 +76,9 @@ table.perms {
 	width:350px;
 	margin-left:30px;
 }
+table.def {
+	width:300px;
+}
 table.permspop, table.notifypop {
 	width:200px;
 	margin-left:10px;
