fixes for 2.5 beta 5

--- a/css/layout.css
+++ b/css/layout.css
@@ -36,6 +36,7 @@ ul.nobullet li { margin-bottom:5px; }
 .error ul, .success ul { margin:10px 30px;}
 
 .minitype { padding:1px 3px; }
+.projlogo { margin-bottom:15px; }
 
 div.pagediv {
 	padding:3px 5px;
