--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body{
 	f\ont-size: small; /* for other IE versions */
 }
 
+h1 { font-size:2.2em; font-weight:bold; }
 h2 { font-size:1.5em; font-weight:bold; }
 h3 { font-size:1.3em; font-weight:bold; }
 h4 { font-size:1.2em; font-weight:normal; }
