--- a/css/images.css
+++ b/css/images.css
@@ -154,6 +154,11 @@
 	padding-left:20px;
 }
 
+.megaphone {
+	background: url(../images/megaphone.png) no-repeat 0 50%;
+	padding-left:20px;
+}
+
 .mstone {
 	background: url(../images/milestone16.gif) no-repeat 0 50%;
 	padding-left:20px;
